--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 
 // conponents main page
 @import "./components/btn";
+@import "./components/menu-btn";
 @import "./components/form/module";
 @import "./components/modal";
 @import "./components/container";
