--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,9 +1,23 @@
 .container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
+  width: 100%;
+  padding-left: 30px;
+  padding-right: 30px;
   margin-left: auto;
   margin-right: auto;
+  @media screen and (min-width:768px) {
+    width: 769px;
+    padding-left: 39px;
+    padding-right: 39px;  
+  }
+
+  @media screen and (min-width:1200px) {
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+    
+  }
 
   /* outline: 1px solid red; */
-}
+
+  
