--- a/css/main.css
+++ b/css/main.css
@@ -284,6 +284,43 @@ img {
   border: transparent;
   outline: transparent;
 }
+.menu-btn__icon {
+  width: 44px;
+  height: 44px;
+}
+.menu-btn__icon-open {
+  opacity: 1;
+  fill: #ffffff;
+}
+.menu-btn__icon-close {
+  opacity: 0;
+}
+
+.mobile-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+}
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .mobile-overlay {
+    background-color: rgba(25, 28, 38, 0.2);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+  }
+}
+
+.mobile-menu {
+  width: 100%;
+  height: 100%;
+  background-color: #FFFFFF;
+}
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .mobile-menu {
+    width: 338px;
+    margin-left: auto;
+  }
+}
 
 /**
 |--------------------------------------------------
@@ -588,6 +625,11 @@ img {
 .header__container {
   display: flex;
   align-items: center;
+}
+@media screen and (max-width: 767px) {
+  .header__container {
+    justify-content: space-between;
+  }
 }
 .header__link {
   margin-right: 70px;
