--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -12,6 +12,10 @@
   &__container {
     display: flex;
     align-items: center;
+
+    @media screen and (max-width:767px) {
+      justify-content: space-between;
+    }
   }
 
   &__link {
