--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,7 @@
 // conponents main page
 @import "./components/btn";
 @import "./components/menu-btn";
+@import "./components/mobile-menu";
 @import "./components/form/module";
 @import "./components/modal";
 @import "./components/container";
