--- a/css/main.css
+++ b/css/main.css
@@ -277,12 +277,22 @@ img {
 }
 
 .menu-btn {
-  display: block;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
   width: 44px;
   height: 44px;
   background-color: transparent;
   border: transparent;
   outline: transparent;
+  z-index: 99;
+}
+@media screen and (min-width: 768px) {
+  .menu-btn {
+    display: none;
+  }
 }
 .menu-btn__icon {
   width: 44px;
@@ -290,7 +300,7 @@ img {
 }
 .menu-btn__icon-open {
   opacity: 1;
-  fill: #ffffff;
+  fill: #2f2f2f;
 }
 .menu-btn__icon-close {
   opacity: 0;
@@ -302,6 +312,11 @@ img {
   left: 0;
   width: 100vw;
   height: 100vh;
+  z-index: 10;
+  transform: translateX(100%);
+  visibility: hidden;
+  pointer-events: none;
+  transition: transform var(--anim-fast);
 }
 @media screen and (min-width: 480px) and (max-width: 767px) {
   .mobile-overlay {
@@ -309,8 +324,15 @@ img {
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
   }
 }
+.mobile-overlay.is-open {
+  transform: translateX(0);
+  visibility: visible;
+  pointer-events: initial;
+}
 
 .mobile-menu {
+  padding: 40px;
+  padding-top: 118px;
   width: 100%;
   height: 100%;
   background-color: #FFFFFF;
@@ -320,6 +342,14 @@ img {
     width: 338px;
     margin-left: auto;
   }
+}
+
+.mobile-nav {
+  margin-bottom: 64px;
+}
+
+.mobile-menu__contacts {
+  margin-bottom: 64px;
 }
 
 /**
