--- a/css/main.css
+++ b/css/main.css
@@ -294,16 +294,29 @@ img {
     display: none;
   }
 }
+@media screen and (min-width: 768px) {
+  .menu-btn {
+    display: none;
+  }
+}
 .menu-btn__icon {
   width: 44px;
   height: 44px;
 }
 .menu-btn__icon-open {
   opacity: 1;
-  fill: #2f2f2f;
+  fill: #ffffff;
 }
 .menu-btn__icon-close {
   opacity: 0;
+}
+
+.menu-btn.is-active .menu-btn__icon-open {
+  opacity: 0;
+}
+
+.menu-btn.is-active .menu-btn__icon-close {
+  opacity: 1;
 }
 
 .mobile-overlay {
