--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -15,18 +15,34 @@ body {
 
 img {
   display: block;
+  width: 100%;
+  height: auto;
 }
 
 .section {
-  padding-top: 130px;
-  padding-bottom: 130px;
+  padding-top: 84px;
+  padding-bottom: 84px;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    padding-top: 130px;
+    padding-bottom: 130px;
+  }  
 }
 
 .uppertitle {
+  margin-bottom: 44px;
   display: flex;
   align-items: center;
-  margin-bottom: 20px;
-
+  color: var(--secondary-txt--mode-light);
+  @media screen and (min-width: 1280px) {
+    margin-bottom: 20px;
+  }
+  
   @include fonts(11px, 1.36, 0.1em, 600);
 
   // font-weight: 600;
