--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -1,7 +1,33 @@
 /* Advantages */
 .advantages-container {
   display: flex;
-  gap: 30px;
+  @media screen and (max-width:1279px) {
+    flex-direction: column-reverse;
+  }
+  
+
+  @media screen and (min-width: 1280px) {
+    gap: 30px;
+  }
+  
+}
+
+.advantages_uppertitle {
+  @media screen and (min-width: 768px) {
+    margin-bottom: 20px;
+  }
+}
+
+.advantages_uppertitle {
+  @media screen and (max-width:767px) {
+    margin-bottom: 20px;
+  }
+}
+
+.advantages_title {
+  @media screen and (max-width:767px) {
+    margin-bottom: 20px;
+  }
 }
 
 .advantages-left-side,
@@ -9,28 +35,59 @@
   flex-basis: 50%;
 }
 
-.advantages-list {
-  width: 370px;
-  margin: 0 auto;
+.advantages-left-side {
+  @media screen and (max-width:767px) {
+    width: 450px;
+  }
+}
 
+.advantages-right-side {
+  @media screen and (min-width:768px) {
+    width: 500px;
+    margin-bottom: 44px;
+  }
+}
+
+.advantages-list {
+  width: 418px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: flex-start;
+  align-items: flex-end;
+
+  @media screen and (min-width:768px) {
+    width: 450px;
+    margin-left: auto;
+  }
+
+  @media screen and (min-width:1280px) {
+    width: 370px;
+    margin: 0 auto;
+  }
 }
 
 .advantages-item {
-  width: 170px;
+  width: 193px;
   min-height: 133px;
   padding: 20px;
 
   text-align: center;
 
   background-color: var(--secondary-bg--mode-light);
+
+  @media screen and (min-width:768px) {
+    width: 210px;
+  }
+
+  @media screen and (min-width:1280px) {
+    width: 170px;
+    
+  }
 }
 
 .advantages-item:nth-child(odd) {
   margin-right: 30px;
+  margin-bottom: 30px;
 }
 
 .advantages-item:first-child {
