--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,23 +1,25 @@
 .container {
   width: 100%;
-  padding-left: 30px;
-  padding-right: 30px;
+  
   margin-left: auto;
   margin-right: auto;
+  outline: 1px solid red;
+
+  @media screen and (min-width:480px) {
+    max-width: 480px;
+    padding-left: 31px;
+    padding-right: 31px;
+  }
+
   @media screen and (min-width:768px) {
-    width: 769px;
+    max-width: 768px;
     padding-left: 39px;
-    padding-right: 39px;  
+    padding-right: 39px;
   }
 
-  @media screen and (min-width:1200px) {
-    width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
+  @media screen and (min-width:1280px) {
+    max-width: 1280px;
+    padding-left: 55px;
+    padding-right: 55px;
   }
-    
-  }
-
-  /* outline: 1px solid red; */
-
-  
+}
