--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -3,22 +3,50 @@
   background-color: var(--secondary-bg--mode-light);
 }
 
+.team_container {
+  @media screen and (min-width: 768px) and (max-width:1279px) {
+    padding-left: 159px;
+    padding-right: 159px;
+  }
+}
+  
+
+.team_uppertitle {
+  margin-bottom: 20px;
+}
+
+.team_title {
+  margin-bottom: 44px;
+}
+
 .team-list {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  margin-top: -30px;
-  margin-right: -30px;
+  @media screen and (min-width: 1280px) {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin-top: -30px;
+    margin-right: -30px;
+  }
 }
 
 .team-member {
-  flex-basis: calc(100% / 3 - 30px);
-  margin-top: 30px;
-  margin-right: 30px;
+  width: 100%;
 
-  text-align: center;
+  @media screen and (min-width: 1280px) {
+    flex-basis: calc(100% / 3 - 30px);
+    // margin-top: 30px;
+    
+    text-align: center;
+  }  
 }
 
+.team-member:not(:last-child) {
+  @media screen and (min-width: 1280px)  {
+
+    margin-right: 30px; 
+  }
+}
+  
 // $colors: (
 //   'primary': #8e3329,
 //   'accent': #d98328,
@@ -34,6 +62,7 @@
 .team-thumb {
   position: relative;
   cursor: context-menu;
+  margin-bottom: 30px;
 
   overflow: hidden;
 }
@@ -61,19 +90,30 @@
 }
 
 .team-wrapper {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  // padding-top: 30px;
+  padding-bottom: 64px;
+
+  @media screen and (min-width:1280px){
+    padding-bottom: 30px;
+  }
 }
 
 .team-headline {
+  text-align: center;
+  font-weight: 400;
+
   font-size: 18px;
   line-height: 1.39;
   letter-spacing: 0.02em;
 
   color: var(--secondary-txt--mode-light);
+
+  // @media screen and (min-width: 1200px)
 }
 
 .team-position {
+  text-align: center;
+  font-weight: 400;
   font-size: 14px;
   line-height: 1.36;
   letter-spacing: 0.02em;
@@ -142,22 +182,19 @@
   background-color: var(--secondary-txt--mode-light);
   color: var(--accent-cl);
 }
+
 .socials-icon {
   fill: currentColor;
 }
 
-/* .socials-link-insagram {
-  background-image: url(../images/icons/instagram.svg);
-}
+// /* .socials-link-insagram {
+//   background-image: url(../images/icons/instagram.svg);
+// }
 
-.socials-link-twitter {
-  background-image: url(../images/icons/twitter.svg);
-}
+// .socials-link-twitter {
+//   background-image: url(../images/icons/twitter.svg);
+// }
 
-.socials-link-facebook {
-  background-image: url(../images/icons/facebook.svg);
-}
-
-.socials-link-linkedin {
-  background-image: url(../images/icons/linkedin.svg);
-} */
+// .socials-link-facebook {
+//   background-image: url(../images/icons/facebook.svg);
+// }
