--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -4,7 +4,21 @@
 }
 
 .about-list {
-  display: flex;
+  display: none;
+
+  @media screen and (min-width:768px) {
+    display: flex;
+  } 
+}
+
+.about-container .title {
+  @media screen and (max-width:767px) {
+    width: 330px;
+    margin-bottom: 20px;
+
+    font-size: 28px;
+  }
+  
 }
 
 .about-item {
