--- a/css/main.css
+++ b/css/main.css
@@ -180,7 +180,7 @@ img {
 }
 
 .uppertitle {
-  margin-bottom: 44px;
+  margin-bottom: 20px;
   display: flex;
   align-items: center;
   color: var(--secondary-txt--mode-light);
@@ -189,11 +189,6 @@ img {
   line-height: 1.36;
   letter-spacing: 0.1em;
   text-transform: uppercase;
-}
-@media screen and (min-width: 1280px) {
-  .uppertitle {
-    margin-bottom: 20px;
-  }
 }
 
 .uppertitle--mode-light {
@@ -214,7 +209,7 @@ img {
 }
 
 .title {
-  margin-bottom: 20px;
+  margin-bottom: 44px;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 42px;
@@ -805,7 +800,20 @@ img {
 }
 
 .about-list {
-  display: flex;
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .about-list {
+    display: flex;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .about-container .title {
+    width: 330px;
+    margin-bottom: 20px;
+    font-size: 28px;
+  }
 }
 
 .about-item {
@@ -830,7 +838,7 @@ img {
 }
 
 /* Price */
-.price {
+.price__section {
   background-color: var(--secondary-bg--mode-dark);
   background-image: url(../images/price/bg-price.png);
   background-position: center;
@@ -838,21 +846,43 @@ img {
   background-repeat: no-repeat;
 }
 
-.price .title {
-  margin-bottom: 44px;
+.price__list {
+  margin-bottom: 50px;
+}
+@media screen and (min-width: 1280px) {
+  .price__list {
+    display: flex;
+    align-items: center;
+  }
 }
 
-.price-list {
-  display: flex;
-  align-items: center;
-  margin-bottom: 50px;
+.price__list-row {
+  display: none;
+}
+@media screen and (min-width: 1280px) {
+  .price__list-row {
+    display: flex;
+  }
+}
+
+.price__list-column {
+  background-image: linear-gradient(180deg, #171a24 0%, rgba(23, 26, 36, 0.2) 100%);
+}
+@media screen and (min-width: 1280px) {
+  .price__list-column {
+    display: none;
+  }
 }
 
 .price-item {
-  /* outline: 1px solid red; */
   flex-basis: 50%;
   padding: 30px 40px;
   background-color: rgba(255, 255, 255, 0.1);
+}
+@media screen and (min-width: 1279px) {
+  .price-item {
+    padding: 30px 40px;
+  }
 }
 
 .price-item-left-side {
@@ -900,7 +930,7 @@ img {
   order: 2;
 }
 
-.price .main-btn {
+.price__section .main-btn {
   display: block;
   margin-left: auto;
   margin-right: auto;
