--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -35,13 +35,13 @@ img {
 }
 
 .uppertitle {
-  margin-bottom: 44px;
+  margin-bottom: 20px;
   display: flex;
   align-items: center;
   color: var(--secondary-txt--mode-light);
-  @media screen and (min-width: 1280px) {
-    margin-bottom: 20px;
-  }
+  // @media screen and (min-width: 1280px) {
+  //   margin-bottom: 44px;
+  // }
   
   @include fonts(11px, 1.36, 0.1em, 600);
 
@@ -70,7 +70,7 @@ img {
 }
 
 .title {
-  margin-bottom: 20px;
+  margin-bottom: 44px;
 
   font-family: $secondary-font;
   font-weight: 700;
