--- a/sass/components/_price.scss
+++ b/sass/components/_price.scss
@@ -1,5 +1,5 @@
 /* Price */
-.price {
+.price__section {
   background-color: var(--secondary-bg--mode-dark);
 
   background-image: url(../images/price/bg-price.png);
@@ -8,23 +8,50 @@
   background-repeat: no-repeat;
 }
 
-.price .title {
-  margin-bottom: 44px;
-}
+// .price__container {
 
-.price-list {
-  display: flex;
-  align-items: center;
+//   @media screen and (max-width:1279px) {
+//     padding-left: 0;
+//     padding-right: 0;
+//   }
+// }
 
+
+
+
+
+.price__list {
+  @media screen and (min-width:1280px) {
+    display: flex;
+    align-items: center;
+  }
+  
   margin-bottom: 50px;
 }
 
+.price__list-row {
+  display: none;
+  @media screen and (min-width:1280px) {
+    display: flex;
+  }
+}
+
+.price__list-column {
+  background-image: linear-gradient(180deg, #171a24 0%, rgba(23, 26, 36, 0.2) 100%);
+
+  @media screen and (min-width:1280px) {
+    display: none;
+  }
+}
+
 .price-item {
-  /* outline: 1px solid red; */
   flex-basis: calc(100% / 2);
   padding: 30px 40px;
-
   background-color: rgba(255, 255, 255, 0.1);
+
+  @media screen and (min-width:1279px) {
+    padding: 30px 40px;
+  }
 }
 .price-item-left-side {
   background-image: linear-gradient(
@@ -82,7 +109,7 @@
   order: 2;
 }
 
-.price .main-btn {
+.price__section .main-btn {
   display: block;
   margin-left: auto;
   margin-right: auto;
