--- a/css/main.css
+++ b/css/main.css
@@ -797,14 +797,30 @@ img {
 /* About us */
 .about-container {
   display: flex;
+  justify-content: space-between;
 }
 
 .about-list {
   display: none;
 }
+@media screen and (min-width: 768px) and (max-width: 1279px) {
+  .about-list {
+    width: 330px;
+  }
+}
 @media screen and (min-width: 768px) {
   .about-list {
+    margin-right: 30px;
     display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    justify-content: space-between;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .about-list {
+    flex-direction: row;
+    align-items: flex-end;
   }
 }
 
@@ -816,17 +832,53 @@ img {
   }
 }
 
-.about-item {
-  margin-right: 30px;
+.about-img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+@media screen and (min-width: 768px) and (max-width: 1279px) {
+  .about-img {
+    width: 330px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .about-item {
+    margin-right: 30px;
+  }
 }
 
 .about-item:last-child {
   margin-right: 0;
 }
 
-.about-wrapper {
-  width: 500px;
-  margin-left: auto;
+@media screen and (min-width: 767px) and (max-width: 1279px) {
+  .about-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .about-wrapper {
+    width: 330px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .about-wrapper {
+    width: 500px;
+    margin-left: auto;
+  }
+}
+
+@media screen and (min-width: 767px) and (max-width: 1279px) {
+  .about-wrapper .title {
+    margin-bottom: 20px;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 33px;
+    letter-spacing: 0.05em;
+  }
 }
 
 .about-descr {
@@ -1253,13 +1305,13 @@ img {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1200px) {
+@media screen and (min-width: 768px) and (max-width: 1279px) {
   .gallery-item:nth-child(2n+1) {
     margin-right: 30px;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1200px) {
+@media screen and (min-width: 768px) and (max-width: 1279px) {
   .gallery-item:nth-child(-n+2) {
     margin-bottom: 30px;
   }
