--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -1,14 +1,30 @@
 /* About us */
 .about-container {
   display: flex;
+  justify-content: space-between;
 }
 
 .about-list {
+  // width: 100%;
   display: none;
 
+  @media screen and (min-width:768px) and (max-width:1279px) {
+    width: 330px;
+  }
+
   @media screen and (min-width:768px) {
+    margin-right: 30px;
     display: flex;
-  } 
+    flex-direction: column;
+    align-items: baseline;
+    justify-content: space-between;
+  }
+  
+  @media screen and (min-width:1280px) {
+    flex-direction: row;
+    align-items: flex-end;
+    
+  }
 }
 
 .about-container .title {
@@ -17,21 +33,60 @@
     margin-bottom: 20px;
 
     font-size: 28px;
-  }
-  
+  } 
 }
 
-.about-item {
-  margin-right: 30px;
+.about-img {
+  display: block;
+  width: 100%;
+  height: auto;
+
+  @media screen and (min-width:768px) and (max-width:1279px) {
+    width: 330px;
+  }
+
+
 }
+
+.about-item {  
+  @media screen and (min-width:1280px) {
+    margin-right: 30px;
+    
+  } 
+}
+
 .about-item:last-child {
   margin-right: 0;
 }
 
-.about-wrapper {
-  width: 500px;
-  margin-left: auto;
+.about-item:not(:last-child) {
+  @media screen and (min-width:767px) and (max-width:1279px) {
+    margin-bottom: 30px;
+  }
 }
+
+.about-wrapper {
+
+  @media screen and (min-width:768px) {
+    width: 330px;
+  }
+
+  @media screen and (min-width:1280px) {
+    width: 500px;
+    margin-left: auto;
+  }
+}
+
+.about-wrapper .title {
+  @media screen and (min-width:767px) and (max-width:1279px) {
+    margin-bottom: 20px;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 33px;
+    letter-spacing: 0.05em;
+  }
+}
+
 
 .about-descr {
   margin-bottom: 40px;
@@ -41,4 +96,5 @@
   letter-spacing: 0.02em;
 
   color: var(--main-txt--mode-light);
+  
 }
