--- a/css/main.css
+++ b/css/main.css
@@ -269,11 +269,6 @@ img {
   transition: background-color var(--anim-slow), border-color var(--anim-slow);
 }
 
-.main-btn {
-  max-width: 160px;
-  min-width: 120px;
-  font-size: 12px;
-}
 .main-btn--mode-light {
   color: #555555;
 }
@@ -303,11 +298,6 @@ img {
   border: transparent;
   outline: transparent;
   z-index: 99;
-}
-@media screen and (min-width: 768px) {
-  .menu-btn {
-    display: none;
-  }
 }
 @media screen and (min-width: 768px) {
   .menu-btn {
@@ -646,6 +636,8 @@ img {
 }
 
 .container {
+  padding-left: 31px;
+  padding-right: 31px;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
@@ -675,9 +667,11 @@ img {
 
 /* Header */
 .header {
-  padding-top: 40px;
-  padding-bottom: 40px;
+  position: fixed;
+  width: 100%;
+  top: 0;
   background-color: var(--primary-bg--mode-dark);
+  transition: background-color var(--anim-slow), backdrop-filter var(--anim-slow), bax-shadow var(--anim-slow);
 }
 @media screen and (min-width: 768px) {
   .header {
@@ -685,6 +679,19 @@ img {
     padding-bottom: 32px;
   }
 }
+@media screen and (min-width: 768px) {
+  .header {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+}
+
+.header.js-no-transparency {
+  background-color: rgba(16, 18, 27, 0.4);
+  backdrop-filter: blur(10px);
+  box-shadow: 0 4px 10px rgba(25, 28, 38, 0.4);
+}
+
 .header__container {
   display: flex;
   align-items: center;
@@ -694,15 +701,39 @@ img {
     justify-content: space-between;
   }
 }
+
 .header__link {
   margin-right: 70px;
 }
+
 .header__logo {
+  display: block;
   animation: bounce-top 0.9s both;
 }
+@media screen and (min-width: 768px) {
+  .header__logo {
+    margin-right: 64px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header__logo {
+    margin-right: 71px;
+  }
+}
+
+.logo__icon {
+  fill: #fff;
+}
+@media screen and (min-width: 768px) {
+  .logo__icon {
+    fill: #303030;
+  }
+}
+
 .header__wrapper {
   display: none;
 }
+
 .header__phone {
   margin-right: 40px;
   flex-shrink: 0;
@@ -715,12 +746,6 @@ img {
 }
 .header__phone:hover, .header__phone:focus {
   color: var(--accent-cl);
-}
-
-@media screen and (max-width: 767px) {
-  .nav {
-    display: none;
-  }
 }
 
 .nav__list {
@@ -749,13 +774,52 @@ img {
 
 /* Hero */
 .hero {
-  background-color: var(--primary-bg--mode-dark);
+  max-width: 767px;
+  min-height: 582px;
+  background-image: linear-gradient(to right, rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(../images/barb_img/hero_480_2x.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    max-width: 1279px;
+    min-height: 680px;
+    background-image: linear-gradient(to right, rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(../images/barb_img/hero_img768_2x.jpg);
+  }
+}
+@media screen and (min-width: 1280px) {
+  .hero {
+    max-width: 1600px;
+    min-height: 680px;
+    background-image: linear-gradient(to right, rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(../images/barb_img/hero1200_2x.jpg);
+  }
+}
+
+.hero .container {
+  position: absolute;
+  height: 582px;
+}
+
+.hero .uppertitle {
+  margin-top: 210px;
+}
+
+.hero__subtitle {
+  width: 306px;
+  font-size: 16px;
+  line-height: 1.62;
 }
 
 .hero__list {
-  display: flex;
-  align-items: center;
-  position: relative;
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .hero__list {
+    display: flex;
+    align-items: center;
+    position: relative;
+  }
 }
 
 .hero__item {
@@ -770,10 +834,16 @@ img {
   margin-bottom: 20px;
   font-family: var(--secondary-font);
   font-weight: 700;
-  font-size: 72px;
-  line-height: 1.18;
+  font-size: 48px;
+  line-height: 1.16;
   letter-spacing: 0.05em;
   color: var(--primary-txt--mode-dark);
+}
+@media screen and (min-width: 1279px) {
+  .hero__title {
+    font-size: 72px;
+    line-height: 1.18;
+  }
 }
 
 .hero__subtitle {
