--- a/sass/components/_menu-btn.scss
+++ b/sass/components/_menu-btn.scss
@@ -17,9 +17,9 @@
         display: none;
     }
 
-    @media screen and (min-width: 768px) {
-        display: none; 
-    }
+    // @media screen and (min-width: 768px) {
+    //     display: none; 
+    // }
 
     &__icon {
         width: 44px;
