--- a/css/main.css
+++ b/css/main.css
@@ -256,9 +256,13 @@ img {
 }
 
 .main-btn {
-  width: 100%;
-  padding: 12px;
+  padding: 12px 20px;
+  max-width: 200px;
+  min-width: 160px;
+  min-height: 40px;
+  font-family: inherit;
   font-weight: 600;
+  font-size: 12px;
   line-height: 1.33;
   letter-spacing: 0.09em;
   text-transform: uppercase;
@@ -266,7 +270,7 @@ img {
   border-radius: 25px;
   background-color: transparent;
   cursor: pointer;
-  transition: background-color var(--anim-slow), border-color var(--anim-slow);
+  transition: background-color var(--fast-anim);
 }
 
 .main-btn--mode-light {
