--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 // utils
 @import "./utils/mixins";
 @import "./utils/visually-hidden";
+@import "./utils/placeholders";
 @import "./utils/animation-pulsate";
 
 // base styles
@@ -24,6 +25,5 @@
 @import "./components/advantages";
 @import "./components/team";
 @import "./components/gallery";
-
 @import "./components/contacts";
 @import "./components/footer";
