--- a/sass/components/_price.scss
+++ b/sass/components/_price.scss
@@ -1,5 +1,7 @@
 /* Price */
 .price__section {
+  width: 480px;
+  height: auto;
   background-color: var(--secondary-bg--mode-dark);
 
   background-image: url(../images/price/bg-price.png);
