--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,24 @@
   margin: -1px;
 }
 
+.main-btn {
+  padding: 12px 20px;
+  max-width: 200px;
+  min-width: 160px;
+  min-height: 40px;
+  font-family: inherit;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.09em;
+  text-transform: uppercase;
+  border: 1px solid var(--accent-cl);
+  border-radius: 25px;
+  background-color: transparent;
+  cursor: pointer;
+  transition: background-color var(--fast-anim);
+}
+
 /* pulsation animation for button */
 .pulsate {
   position: relative;
@@ -147,13 +165,19 @@ p:last-child {
   text-decoration: none;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Open Sans", sans-serif;
-  font-size: 18px;
-  line-height: 1.67;
+  font-size: 14px;
+  line-height: 1.86;
   letter-spacing: 0.02em;
   color: var(--main-txt--mode-light);
-  overflow-x: hidden;
+}
+body.no-scroll {
+  overflow: hidden;
 }
 
 img {
@@ -184,10 +208,10 @@ img {
   display: flex;
   align-items: center;
   color: var(--secondary-txt--mode-light);
-  font-size: 11px;
-  font-weight: 600;
-  line-height: 1.36;
-  letter-spacing: 0.1em;
+  font-weight: 11px;
+  font-size: 1.36;
+  line-height: 0.07;
+  letter-spacing: 600;
   text-transform: uppercase;
 }
 
@@ -234,25 +258,60 @@ img {
   letter-spacing: 0.02em;
 }
 
-.subtitle--mode-light {
-  color: var(--main-txt--mode-light);
-}
-
 .subtitle--mode-dark {
   color: var(--main-txt--mode-dark);
 }
 
-.public-link {
-  font-weight: 600;
-  font-size: 11px;
-  line-height: 1.36;
-  letter-spacing: 0.2em;
-  color: var(--secondary-txt--mode-light);
+.uppertitle--mode-dark {
+  color: rgba(157, 164, 189, 0.6);
 }
 
-.public-link:hover,
-.public-link:focus {
-  color: var(--accent-cl);
+.uppertitle--mode-dark:before {
+  background-color: rgba(157, 164, 189, 0.6);
+}
+
+.uppertitle {
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.uppertitle::before {
+  content: "";
+  margin-right: 20px;
+  display: block;
+  width: 60px;
+  height: 1px;
+}
+
+.subtitle--mode-light {
+  color: var(--main-txt--mode-light);
+}
+
+.uppertitle--mode-light {
+  color: #303030;
+}
+
+.uppertitle--mode-light:before {
+  background-color: #303030;
+}
+
+.section-title {
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 1.16;
+  letter-spacing: 0.05em;
+}
+
+.no-scroll {
+  overflow: hidden;
+}
+
+.js-no-transparency {
+  transition: background-color var(--slow-anim), backdrop-filter var(--slow-anim);
+  background-color: rgba(16, 18, 27, 0.4);
+  backdrop-filter: blur(10px);
 }
 
 .main-btn {
@@ -292,6 +351,7 @@ img {
 
 .menu-btn {
   position: relative;
+  margin-left: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -640,33 +700,86 @@ img {
 }
 
 .container {
-  padding-left: 31px;
-  padding-right: 31px;
   width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
   outline: 1px solid red;
 }
 @media screen and (min-width: 480px) {
   .container {
-    max-width: 480px;
-    padding-left: 31px;
-    padding-right: 31px;
+    max-width: 448px;
   }
 }
 @media screen and (min-width: 768px) {
   .container {
-    max-width: 768px;
-    padding-left: 39px;
-    padding-right: 39px;
+    max-width: 720px;
   }
 }
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1200px) {
   .container {
-    max-width: 1280px;
-    padding-left: 55px;
-    padding-right: 55px;
+    max-width: 1200px;
   }
+}
+
+.socials {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.socials-item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.socials-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  background-color: #ffffff;
+  color: var(--secondary-txt--mode-light);
+  border-radius: 50%;
+  transition: color var(--fast-anim);
+}
+
+.socials-link:hover,
+.socials-link:focus {
+  color: var(--checkbox-accent);
+}
+
+.social-icon {
+  fill: currentColor;
+}
+
+.social-links-list::before {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 1px;
+  margin-right: 40px;
+  background-color: var(--secondary-txt--mode-light);
+}
+
+.social-links-item {
+  margin-right: 40px;
+}
+.social-links-item:last-child {
+  margin-right: 0;
+}
+
+.social-links-item-link {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  letter-spacing: 0.2em;
+  color: var(--secondary-txt--mode-light);
+  transform: color var(--fast-anim);
+}
+.social-links-item-link:hover, .social-links-item-link:focus {
+  color: var(--checkbox-accent);
 }
 
 /* Header */
@@ -674,20 +787,8 @@ img {
   position: fixed;
   width: 100%;
   top: 0;
-  background-color: var(--primary-bg--mode-dark);
+  z-index: 10;
   transition: background-color var(--anim-slow), backdrop-filter var(--anim-slow), bax-shadow var(--anim-slow);
-}
-@media screen and (min-width: 768px) {
-  .header {
-    padding-top: 32px;
-    padding-bottom: 32px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .header {
-    padding-top: 32px;
-    padding-bottom: 32px;
-  }
 }
 
 .header.js-no-transparency {
@@ -700,18 +801,11 @@ img {
   display: flex;
   align-items: center;
 }
-@media screen and (max-width: 767px) {
-  .header__container {
-    justify-content: space-between;
-  }
-}
-
-.header__link {
-  margin-right: 70px;
-}
 
 .header__logo {
   display: block;
+  padding-top: 40px;
+  padding-bottom: 40px;
   animation: bounce-top 0.9s both;
 }
 @media screen and (min-width: 768px) {
@@ -737,23 +831,49 @@ img {
 .header__wrapper {
   display: none;
 }
+@media screen and (min-width: 768px) {
+  .header__wrapper {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+  }
+}
 
 .header__phone {
-  margin-right: 40px;
-  flex-shrink: 0;
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 1.33;
-  letter-spacing: 0.1em;
-  color: var(--primary-txt--mode-dark);
-  transition: color var(--anim-fast);
+  display: none;
+}
+@media screen and (min-width: 1280px) {
+  .header__phone {
+    display: block;
+    margin-right: 40px;
+    padding-bottom: 52px;
+    padding-top: 52px;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 1.33;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    color: var(--primary-txt--mode-dark);
+    transition: color var(--anim-fast);
+    flex-shrink: 0;
+  }
 }
 .header__phone:hover, .header__phone:focus {
   color: var(--accent-cl);
 }
 
+.nav {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .nav {
+    display: block;
+  }
+}
+
 .nav__list {
   display: flex;
+  gap: 23px;
   align-items: center;
 }
 
@@ -765,6 +885,10 @@ img {
 }
 
 .nav__link {
+  position: relative;
+  display: block;
+  padding-top: 52px;
+  padding-bottom: 52px;
   font-weight: 600;
   font-size: 12px;
   line-height: 1.33;
@@ -775,63 +899,93 @@ img {
 .nav__link:hover, .nav__link:focus {
   color: var(--accent-cl);
 }
+.nav__link--current {
+  color: var(--accent-cl);
+}
+.nav__link--current::after {
+  position: absolute;
+  bottom: 30px;
+  left: 0;
+  content: "";
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: var(--accent-cl);
+}
+
+.header__btn {
+  animation: swing 6s ease-in-out infinite forwards;
+}
 
 /* Hero */
 .hero {
-  max-width: 767px;
-  min-height: 582px;
-  background-image: linear-gradient(to right, rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(../images/barb_img/hero_480_2x.jpg);
-  background-position: center;
-  background-size: cover;
+  max-width: 1280px;
+  min-height: 680px;
+  margin: 0 auto;
+  background-color: #191c26;
+  background-image: url(../images/barb_img/hero1200_2x.jpg), linear-gradient(to right, #fff 12%, #191c26 12%);
+  background-size: 1125px 680px, contain;
+  background-position: top right, center;
   background-repeat: no-repeat;
 }
-@media screen and (min-width: 768px) {
-  .hero {
-    max-width: 1279px;
-    min-height: 680px;
-    background-image: linear-gradient(to right, rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(../images/barb_img/hero_img768_2x.jpg);
-  }
-}
-@media screen and (min-width: 1280px) {
-  .hero {
-    max-width: 1600px;
-    min-height: 680px;
-    background-image: linear-gradient(to right, rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(../images/barb_img/hero1200_2x.jpg);
-  }
+
+.hero-container {
+  position: relative;
+  display: flex;
 }
 
-.hero .container {
-  position: absolute;
-  height: 582px;
-}
-
-.hero .uppertitle {
-  margin-top: 210px;
-}
-
-.hero__subtitle {
-  width: 306px;
-  font-size: 16px;
-  line-height: 1.62;
+.hero-left-side {
+  display: flex;
+  align-items: flex-end;
+  width: 100px;
 }
 
 .hero__list {
-  display: none;
-}
-@media screen and (min-width: 768px) {
-  .hero__list {
-    display: flex;
-    align-items: center;
-    position: relative;
-  }
+  display: flex;
+  align-items: center;
+  transform: rotate(-90deg) translateY(100%);
+  transform-origin: left top;
 }
 
-.hero__item {
-  margin-right: 40px;
+.hero-right-side {
+  flex-grow: 1;
+  margin-top: 272px;
+  margin-bottom: 206px;
+  margin-left: 100px;
 }
 
-.hero__item:last-child {
-  margin: 0;
+.hero .uppertitle {
+  animation: expand 0.6s ease-in;
+}
+
+.hero .main-title {
+  margin-bottom: 20px;
+  font-family: var(--secondary-font);
+  font-weight: 700;
+  font-size: 72px;
+  line-height: 1.18;
+  letter-spacing: 0.05em;
+  color: #ffffff;
+  animation: fade-left-to-right 1s ease-out;
+}
+
+.hero .subtitle {
+  width: 476px;
+  animation: fade-bottom-to-top 2s ease;
+}
+
+.hero__list::before {
+  content: "";
+  width: 60px;
+  height: 1px;
+  background-color: var(--secondary-txt--mode-light);
+}
+
+.hero-descr {
+  font-size: 18px;
+  line-height: 1.67;
+  letter-spacing: 0.02em;
+  color: #9da4bd;
 }
 
 .hero__title {
@@ -842,30 +996,6 @@ img {
   line-height: 1.16;
   letter-spacing: 0.05em;
   color: var(--primary-txt--mode-dark);
-}
-@media screen and (min-width: 1279px) {
-  .hero__title {
-    font-size: 72px;
-    line-height: 1.18;
-  }
-}
-
-.hero__subtitle {
-  margin-bottom: 0;
-}
-
-.hero__btn {
-  font-weight: 600;
-  font-size: 11px;
-  line-height: 1.36;
-  letter-spacing: 0.1em;
-  color: var(--primary-txt--mode-dark);
-  background-color: transparent;
-  cursor: pointer;
-}
-
-.hero__btn--disable {
-  color: rgba(157, 164, 189, 0.6);
 }
 
 /* About us */
@@ -965,6 +1095,8 @@ img {
 
 /* Price */
 .price__section {
+  width: 480px;
+  height: auto;
   background-color: var(--secondary-bg--mode-dark);
   background-image: url(../images/price/bg-price.png);
   background-position: center;
