--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,16 +1,21 @@
 @import "./reset";
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: $main-font;
-  // font-size: 18px;
-  // line-height: 1.67;
-  // letter-spacing: 0.02em;
-
-  @include fonts(18px);
+  font-size: 14px;
+  line-height: 1.86;
+  letter-spacing: 0.02em;
 
   color: var(--main-txt--mode-light);
 
-  overflow-x: hidden;
+  &.no-scroll {
+		overflow: hidden;
+	}
+  // overflow-x: hidden;
 }
 
 img {
@@ -98,24 +103,69 @@ img {
   letter-spacing: 0.02em;
 }
 
-.subtitle--mode-light {
-  color: var(--main-txt--mode-light);
-}
+
 
 .subtitle--mode-dark {
   color: var(--main-txt--mode-dark);
 }
 
-.public-link {
-  font-weight: 600;
-  font-size: 11px;
-  line-height: 1.36;
-  letter-spacing: 0.2em;
-
-  color: var(--secondary-txt--mode-light);
+.uppertitle--mode-dark {
+  color: rgba(157, 164, 189, 0.6);
 }
 
-.public-link:hover,
-.public-link:focus {
-  color: var(--accent-cl);
+.uppertitle--mode-dark:before {
+  background-color: rgba(157, 164, 189, 0.6);
+}
+
+// .public-link {
+//   font-weight: 600;
+//   font-size: 11px;
+//   line-height: 1.36;
+//   letter-spacing: 0.2em;
+
+//   color: var(--secondary-txt--mode-light);
+// }
+
+// .public-link:hover,
+// .public-link:focus {
+//   color: var(--accent-cl);
+// }
+
+.uppertitle {
+  margin-bottom: 20px;
+
+  display: flex;
+  align-items: center;
+
+  // @include fonts(600, 11px, 15px, 0.1em, uppercase);
+}
+
+.uppertitle::before {
+  content: '';
+  margin-right: 20px;
+
+  display: block;
+  width: 60px;
+  height: 1px;
+}
+
+.subtitle--mode-light {
+  color: var(--main-txt--mode-light);
+}
+
+.uppertitle--mode-light {
+  color: #303030;
+}
+
+.uppertitle--mode-light:before {
+  background-color: #303030;
+}
+
+.section-title {
+  margin-bottom: 20px;
+
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 1.16;
+  letter-spacing: 0.05em;
 }
