--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,27 +1,27 @@
 .container {
-  padding-left: 31px;
-  padding-right: 31px;
   width: 100%;
-  
+  padding-left: 15px;
+  padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+
   outline: 1px solid red;
 
   @media screen and (min-width:480px) {
-    max-width: 480px;
-    padding-left: 31px;
-    padding-right: 31px;
+    max-width: 448px;
+    // padding-left: 31px;
+    // padding-right: 31px;
   }
 
   @media screen and (min-width:768px) {
-    max-width: 768px;
-    padding-left: 39px;
-    padding-right: 39px;
+    max-width: 720px;
+    // padding-left: 39px;
+    // padding-right: 39px;
   }
 
-  @media screen and (min-width:1280px) {
-    max-width: 1280px;
-    padding-left: 55px;
-    padding-right: 55px;
+  @media screen and (min-width:1200px) {
+    max-width: 1200px;
+    // padding-left: 55px;
+    // padding-right: 55px;
   }
 }
