--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -3,21 +3,22 @@
   position: fixed;
   width: 100%;
   top: 0;
+  z-index: 10;
   // padding-top: 42px;
   // padding-bottom: 0px;
-  background-color: var(--primary-bg--mode-dark);
+  // background-color: var(--primary-bg--mode-dark);
 
   transition: background-color var(--anim-slow), backdrop-filter var(--anim-slow), bax-shadow var(--anim-slow);
 
-  @media screen and (min-width: 768px) {
-    padding-top: 32px;
-    padding-bottom: 32px;
-  }
+  // @media screen and (min-width: 768px) {
+  //   padding-top: 32px;
+  //   padding-bottom: 32px;
+  // }
 
-  @media screen and (min-width: 768px) {
-    padding-top: 32px;
-    padding-bottom: 32px;
-  }
+  // @media screen and (min-width: 768px) {
+  //   padding-top: 32px;
+  //   padding-bottom: 32px;
+  // }
 }
 
 .header.js-no-transparency {
@@ -26,23 +27,23 @@
 	box-shadow: 0 4px 10px rgba(25, 28, 38, 0.4);
 }
 
-
-
 .header__container {
   display: flex;
   align-items: center;
 
-  @media screen and (max-width:767px) {
-    justify-content: space-between;
-  }
+  // @media screen and (max-width:767px) {
+  //   justify-content: space-between;
+  // }
 }
 
-.header__link {
-    margin-right: 70px;
-  }
+// .header__link {
+//     margin-right: 70px;
+//   }
 
 .header__logo {
   display: block;
+  padding-top: 40px;
+	padding-bottom: 40px;
 
   animation: bounce-top 0.9s both;
 
@@ -63,39 +64,59 @@
 	}
 }
 
-  .header__wrapper {
-    display: none;
-    // display: flex;
-    // align-items: center;
-    // margin-left: auto;
-  }
+.header__wrapper {
+  display: none;
 
-  .header__phone {
+  @media screen and (min-width: 768px) {
+    // display: block;
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+  }    
+}
+
+.header__phone {
+  display: none;
+
+  @media screen and (min-width:1280px) {
+    display: block;
     margin-right: 40px;
-
-    flex-shrink: 0;
-
-    font-weight: 600;
-    font-size: 12px;
-    line-height: 1.33;
-    letter-spacing: 0.1em;
+    padding-bottom: 52px;
+    padding-top: 52px;
+    
+	  font-weight: 600;
+	  font-size: 12px;
+	  line-height: 1.33;
+	  letter-spacing: 0.1em;
+	  text-transform: uppercase;
 
     color: var(--primary-txt--mode-dark);
-
     transition: color var(--anim-fast);
-
-    &:hover,
-    &:focus {
-      color: var(--accent-cl);
-    }
+    flex-shrink: 0;  
+    } 
+  &:hover,
+  &:focus {
+    color: var(--accent-cl);
   }
+}
 
+.nav {
+  display: none;
 
-
+  @media screen and (min-width: 768px) {
+    display: block;
+  }
+}
 
 .nav__list {
   display: flex;
+  gap: 23px;
   align-items: center;
+
+  // @media screen and (min-width: 768px) {
+  //   display: flex;
+  // }
+  
 }
 
 .nav__item {
@@ -107,6 +128,12 @@
 }
 
 .nav__link {
+  position: relative;
+  display: block;
+
+  padding-top: 52px;
+  padding-bottom: 52px;
+
   font-weight: 600;
   font-size: 12px;
   line-height: 1.33;
@@ -120,4 +147,24 @@
   &:focus {
     color: var(--accent-cl);
   }
+
+  &--current {
+    color: var(--accent-cl);
+
+    &::after {
+      position: absolute;
+      bottom: 30px;
+      left: 0;
+
+      content: "";
+      display: block;
+      width: 100%;
+      height: 2px;
+      background-color: var(--accent-cl);
+    }
+  }
+}
+
+.header__btn {
+  animation: swing 6s ease-in-out infinite forwards;
 }
