--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import "./utils/visually-hidden";
 @import "./utils/placeholders";
 @import "./utils/animation-pulsate";
+@import "./slider/slider-pagination";
 
 // base styles
 @import "./base/base";
