--- a/css/main.css
+++ b/css/main.css
@@ -138,6 +138,15 @@
     opacity: 1;
   }
 }
+.slider__pagination {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  flex-direction: column;
+  width: 18px;
+}
+
 h1,
 h2,
 h3,
@@ -204,14 +213,15 @@ img {
 }
 
 .uppertitle {
+  margin-top: 0;
   margin-bottom: 20px;
   display: flex;
   align-items: center;
   color: var(--secondary-txt--mode-light);
-  font-weight: 11px;
-  font-size: 1.36;
-  line-height: 0.07;
-  letter-spacing: 600;
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  letter-spacing: 0.1em;
   text-transform: uppercase;
 }
 
@@ -233,7 +243,7 @@ img {
 }
 
 .title {
-  margin-bottom: 44px;
+  margin-bottom: 20px;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 42px;
@@ -268,20 +278,6 @@ img {
 
 .uppertitle--mode-dark:before {
   background-color: rgba(157, 164, 189, 0.6);
-}
-
-.uppertitle {
-  margin-bottom: 20px;
-  display: flex;
-  align-items: center;
-}
-
-.uppertitle::before {
-  content: "";
-  margin-right: 20px;
-  display: block;
-  width: 60px;
-  height: 1px;
 }
 
 .subtitle--mode-light {
@@ -920,7 +916,7 @@ img {
 /* Hero */
 .hero {
   max-width: 1280px;
-  min-height: 680px;
+  min-height: auto;
   margin: 0 auto;
   background-color: #191c26;
   background-image: url(../images/barb_img/hero1200_2x.jpg), linear-gradient(to right, #fff 12%, #191c26 12%);
@@ -999,9 +995,8 @@ img {
 }
 
 /* About us */
-.about-container {
+.about__container {
   display: flex;
-  justify-content: space-between;
 }
 
 .about-list {
@@ -1023,44 +1018,27 @@ img {
 }
 @media screen and (min-width: 1280px) {
   .about-list {
+    margin-right: 64px;
     flex-direction: row;
     align-items: flex-end;
   }
 }
 
-@media screen and (max-width: 767px) {
-  .about-container .title {
-    width: 330px;
-    margin-bottom: 20px;
-    font-size: 28px;
-  }
+.about-list__item {
+  margin-right: 30px;
+  overflow: hidden;
 }
 
-.about-img {
-  display: block;
-  width: 100%;
-  height: auto;
-}
-@media screen and (min-width: 768px) and (max-width: 1279px) {
-  .about-img {
-    width: 330px;
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  .about-item {
-    margin-right: 30px;
-  }
-}
-
-.about-item:last-child {
+.about-list__item:last-child {
   margin-right: 0;
 }
 
-@media screen and (min-width: 767px) and (max-width: 1279px) {
-  .about-item:not(:last-child) {
-    margin-bottom: 30px;
-  }
+.about-list__img {
+  transition: transform var(--anim-slow);
+}
+
+.about-list__item:hover .about-list__img {
+  transform: scale(1.15);
 }
 
 @media screen and (min-width: 768px) {
@@ -1071,7 +1049,6 @@ img {
 @media screen and (min-width: 1280px) {
   .about-wrapper {
     width: 500px;
-    margin-left: auto;
   }
 }
 
@@ -1085,110 +1062,92 @@ img {
   }
 }
 
+.about__subtitle {
+  margin-bottom: 20px;
+}
+
+.about__description {
+  margin-bottom: 40px;
+}
+
 .about-descr {
   margin-bottom: 40px;
-  font-size: 14px;
-  line-height: 1.86;
-  letter-spacing: 0.02em;
-  color: var(--main-txt--mode-light);
 }
 
 /* Price */
-.price__section {
-  width: 480px;
-  height: auto;
+.price {
+  width: 1280px;
+  margin-left: auto;
+  margin-right: auto;
   background-color: var(--secondary-bg--mode-dark);
-  background-image: url(../images/price/bg-price.png);
+  background-image: url(../images/price/bg-price.png), linear-gradient(to bottom, #191c26, #191c26);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
 
 .price__list {
+  perspective: 1000px;
   margin-bottom: 50px;
-}
-@media screen and (min-width: 1280px) {
-  .price__list {
-    display: flex;
-    align-items: center;
-  }
-}
-
-.price__list-row {
-  display: none;
-}
-@media screen and (min-width: 1280px) {
-  .price__list-row {
-    display: flex;
-  }
-}
-
-.price__list-column {
-  background-image: linear-gradient(180deg, #171a24 0%, rgba(23, 26, 36, 0.2) 100%);
-}
-@media screen and (min-width: 1280px) {
-  .price__list-column {
-    display: none;
-  }
+  display: flex;
 }
 
 .price-item {
   flex-basis: 50%;
-  padding: 30px 40px;
-  background-color: rgba(255, 255, 255, 0.1);
-}
-@media screen and (min-width: 1279px) {
-  .price-item {
-    padding: 30px 40px;
-  }
+  transition: transform var(--anim-fast);
 }
 
-.price-item-left-side {
+.price-item:first-child {
   background-image: linear-gradient(180deg, #171a24 0%, rgba(23, 26, 36, 0.2) 100%);
+  transform-origin: left;
+  transform: rotateX(7deg) rotateY(25deg);
 }
 
-.price-item-right-side {
+.price-item:first-child:hover {
+  transform: rotateX(0deg) rotateY(5deg);
+}
+
+.price-item:last-child {
   background-image: linear-gradient(180deg, #090b13 0%, rgba(9, 11, 19, 0.2) 100%);
+  transform-origin: right;
+  transform: rotateX(7deg) rotateY(-25deg);
+}
+
+.price-item:last-child:hover {
+  transform: rotateX(7deg) rotateY(-5deg);
+}
+
+.price-inner-list {
+  padding: 30px 40px;
+  font-size: 18px;
+  line-height: 1.67;
+  color: #9da4bd;
 }
 
 .price-inner-item {
   display: flex;
-  /* justify-content: space-between; */
   align-items: baseline;
+}
+
+.price-inner-item:not(:last-child) {
   margin-bottom: 20px;
 }
 
-.price-inner-item:last-child {
-  margin-bottom: 0;
+.price-inner-item span:last-of-type {
+  order: 2;
 }
 
 .price-inner-item::after {
   content: "";
-  display: block;
-  margin: 0 6px;
-  /* width: 100%; */
-  height: 1px;
-  background-color: rgba(157, 164, 189, 0.12);
-  /* Вариант оформления через свойство элемента занимать
-  все доступное пространство внутри флекс-контейнера */
   flex-grow: 1;
+  order: 1;
+  height: 1px;
+  margin-left: 6px;
+  margin-right: 6px;
+  background-color: rgba(157, 164, 189, 0.12);
 }
 
-.price-inner-name,
-.price-inner-cost {
-  color: var(--main-txt--mode-dark);
-  /* Вариант оформления через запрет на сжатие элемента
-  внутри флекс-контейнера */
-  flex-shrink: 0;
-}
-
-.price-inner-cost {
-  /* Изменение порядка элемента внутри флекс-контейнера
-  чем больше значение, тем дальше элемент в очереди */
-  order: 2;
-}
-
-.price__section .main-btn {
+.price .btn {
   display: block;
   margin-left: auto;
   margin-right: auto;
