--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -2,7 +2,7 @@
 .hero {
   // position: relative;
   max-width: 1280px;
-  min-height: 680px;
+  min-height: auto;
   margin: 0 auto;
 
   background-color: #191c26;
