--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -14,13 +14,27 @@ p:last-child {
   margin-bottom: 0;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 .list {
   padding-left: 0;
   margin-top: 0;
   margin-bottom: 0;
   list-style: none;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .link {
   text-decoration: none;
+}
+
+.link {
+  text-decoration: none;
+  color: currentColor;
 }
